--- a/584486_uebung_03/index.html
+++ b/584486_uebung_03/index.html
@@ -19,6 +19,7 @@
 	<script src="./p5.js"></script>
 	<script src="example.js"></script> <!-- main programm -->
 	<script src="addOns.js"></script> <!-- for later use, subroutines for example  -->
+	<script src="interactivity.js"></script>
 </head>
 
 <body>
