--- a/584486_uebung_04/index.html
+++ b/584486_uebung_04/index.html
@@ -18,7 +18,7 @@
 	<script src="../p5.js"></script>
 	<script src="./p5.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
-	<script src="example.js"></script> <!-- main programm -->
+	<script src="main.js"></script> <!-- main programm -->
 	<script src="addOns.js"></script> <!-- for later use, subroutines for example  -->
 	<script src="interactivity.js"></script>
 	<script src="collisions.js"></script>
