--- a/584486_uebung_06/index.html
+++ b/584486_uebung_06/index.html
@@ -21,6 +21,7 @@
 	<script src="addOns.js"></script> <!-- for later use, subroutines for example  -->
 	<script src="interactions.js"></script>
 	<script src="collisions.js"></script>
+	<script src="measurements.js"></script>
 </head>
 
 <body>
