--- a/584486_uebung_09/index.html
+++ b/584486_uebung_09/index.html
@@ -20,8 +20,9 @@
 	<script src="main.js"></script> <!-- main programm -->
 	<script src="addOns.js"></script> <!-- for later use, subroutines for example  -->
 	<script src="interactions.js"></script>
-	<script src="collisions.js"></script>
+	<script src="advanced_collisions.js"></script>
 	<script src="drag_and_wind.js"></script>
+	<script src="segments.js"></script>
 </head>
 
 <body>
