--- a/584486_uebung_09/index.html
+++ b/584486_uebung_09/index.html
@@ -22,6 +22,7 @@
 	<script src="interactions.js"></script>
 	<script src="collisions.js"></script>
 	<script src="drag_and_wind.js"></script>
+	<script src="collision_helper.js"></script>
 </head>
 
 <body>
