added collision helper methods

--- a/584486_uebung_09/index.html
+++ b/584486_uebung_09/index.html
@@ -23,6 +23,7 @@
 	<script src="collisions.js"></script>
 	<script src="drag_and_wind.js"></script>
 	<script src="collision_helper.js"></script>
+	<script src="advanced_collisions.js"></script>
 </head>
 
 <body>
