added button to test scoring

--- a/584486_uebung_09/index.html
+++ b/584486_uebung_09/index.html
@@ -24,6 +24,7 @@
 	<script src="drag_and_wind.js"></script>
 	<script src="collision_helper.js"></script>
 	<script src="advanced_collisions.js"></script>
+	<script src="segments.js"></script>
 </head>
 
 <body>
